src/z80asm/z80asm2/t/20-preproc/expected/defvars_29.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defvars_29.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/defvars_29.asm...
t/20-preproc/input/defvars_29.asm:1:11: error: Unexpected '}' in DEFVARS directive
    defvars 0 } { ,, var1 DS.B 1 ,, var2 DS.B 1 ,, var3 DS.B 1 ,, }
              ^
# file: t/20-preproc/input/defvars_29.asm
EndOfLine	"\n"	2:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
